# Boxes-Software

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  error.rs  main.rs  utils.rs
src-tauri/src/minecraft/: jars.rs  server.rs  server_manipulator.rs
src-tauri/src/tauri_impl/: commands.rs
src/components/: Layout.vue  Prompt.vue  Sidebar.vue  Toast.vue
src/components/pages/: About.vue  Home.vue  NewServer.vue  Server.vue  Servers.vue
src/styles/: global.css
